--- a/src/pages/hello-ionic/hello-ionic.html
+++ b/src/pages/hello-ionic/hello-ionic.html
@@ -8,8 +8,20 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
+<div text-center>
+  <h2>Mapa de Procesos</h2>
+</div>
+<div text-center>
+  <button ion-button class="blue" (click)="goToCursos()">Plan Formación</button>
+</div>
+<div text-center>
+  <button ion-button class="red" >Proveedores</button>
+</div>
+<div text-center>
+  <button ion-button class="orange">Clientes</button>
+</div>
 
-<h2>Bienvenidos a Quality Soft</h2>
+
 
 </ion-content>
