--- a/src/pages/cursos/cursos.html
+++ b/src/pages/cursos/cursos.html
@@ -1,10 +1,11 @@
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar hideBackButton>
     <button ion-button menuToggle>
-    <ion-icon name="menu"></ion-icon>
+      <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title> Plan Anual de Formación</ion-title>
+
+    <ion-title> Plan Formación</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="addCurso()"><ion-icon name="add"></ion-icon></button>
     </ion-buttons>
